minimize file size, made it work with java 8